# color-columns-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  release.sh  rust-toolchain.toml
.cargo/: config.nightly.toml
src/: app.rs  data_dir.rs  errors.rs  game.rs  game_state.rs  logger.rs  main.rs  messages.rs  renderer.rs  score.rs  scoring.rs  terminal.rs  visual_effects.rs
src/blocks/: block.rs  column.rs  mod.rs  pile.rs
src/color_palettes/: macos.rs  mod.rs  standard.rs
src/logging/: dev_console.rs  file.rs  file_logger.rs  mod.rs
src/rendering/: gameover.rs  gameover_ui.rs  gameplay.rs  gameplay_ui.rs  instructions.rs  instructions_ui.rs  mod.rs  paused.rs  paused_ui.rs  ready_ui.rs
src/stage_handlers/: gameover.rs  gameplay.rs  instructions.rs  mod.rs  paused.rs  ready.rs
